# halicore

./: halicore.cabal
src/: GetCore.hs  Halicore.hs  Main.hs
