cabal-version:       >= 1.2
build-type:          Simple
name:                halicore
version:             0.0
synopsis:            Translator from GHC Core to Isabelle/HOLCF
category:            Math
license:             BSD3
--author:
--maintainer:

executable halicore
    hs-source-dirs:      src
    main-is:             Halicore.hs
    ghc-options:         -Wall -fwarn-tabs
    if os(darwin)
       ghc-options:      -optl-Wl,-dead_strip
    ghc-prof-options:    -auto-all
    build-depends:       base > 4,
                         ghc >= 6.12 && < 8,
                         ghc-paths,
                         process,
                         filepath,
                         directory,
                         temporary,
                         bytestring == 0.9.*,
                         text == 0.11.*,
                         wl-pprint-text == 1.0.*,
                         zenc == 0.1.*,
                         extcore == 1.0.*
